--- a/spec/fixtures/vcr_cassettes/MapService/get_coordinates/returns_error_messages_if_parameters_are_invalid.yml
+++ b/spec/fixtures/vcr_cassettes/MapService/get_coordinates/returns_error_messages_if_parameters_are_invalid.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: http://www.mapquestapi.com/geocoding/v1/address?key=uLkKiNYk4hsISHMGIlAN58sm0zghShaG&location=
+    uri: http://www.mapquestapi.com/geocoding/v1/address?key=<map_key>&location=
     body:
       encoding: US-ASCII
       string: ''
@@ -19,7 +19,7 @@ http_interactions:
       message: ''
     headers:
       Date:
-      - Sun, 16 Jan 2022 15:48:39 GMT
+      - Sun, 16 Jan 2022 16:42:32 GMT
       Content-Type:
       - application/json;charset=UTF-8
       Content-Length:
@@ -35,13 +35,13 @@ http_interactions:
       Geocodetransactioncount:
       - '0'
       Last-Modified:
-      - Sun, 16 Jan 2022 15:48:39 GMT
+      - Sun, 16 Jan 2022 16:42:32 GMT
       Pragma:
       - no-cache
       Reversegeocodetransactioncount:
       - '0'
       Set-Cookie:
-      - JSESSIONID=42622315A9E2555C111188B427EC582A; Path=/; HttpOnly
+      - JSESSIONID=A8A864C2555030B3D8BC08DA1992CA4D; Path=/; HttpOnly
       Status:
       - success
       Transactionweight:
@@ -52,5 +52,5 @@ http_interactions:
         Inc.","imageUrl":"http://api.mqcdn.com/res/mqlogo.gif","imageAltText":"\u00A9
         2022 MapQuest, Inc."},"messages":["Illegal argument from request: Insufficient
         info for location"]},"options":{"maxResults":-1,"thumbMaps":true,"ignoreLatLngInput":false},"results":[{"providedLocation":{"location":""},"locations":[]}]}'
-  recorded_at: Sun, 16 Jan 2022 15:48:39 GMT
+  recorded_at: Sun, 16 Jan 2022 16:42:32 GMT
 recorded_with: VCR 6.0.0
