--- a/spec/fixtures/vcr_cassettes/MapService/get_coordinates/returns_just_the_coordinates_of_the_address_given.yml
+++ b/spec/fixtures/vcr_cassettes/MapService/get_coordinates/returns_just_the_coordinates_of_the_address_given.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: http://www.mapquestapi.com/geocoding/v1/address?key=uLkKiNYk4hsISHMGIlAN58sm0zghShaG&location=Washington,DC
+    uri: http://www.mapquestapi.com/geocoding/v1/address?key=<map_key>&location=Washington,DC
     body:
       encoding: US-ASCII
       string: ''
@@ -19,11 +19,11 @@ http_interactions:
       message: ''
     headers:
       Date:
-      - Sun, 16 Jan 2022 15:36:12 GMT
+      - Sun, 16 Jan 2022 16:42:32 GMT
       Content-Type:
       - application/json;charset=UTF-8
       Content-Length:
-      - '1044'
+      - '1045'
       Access-Control-Allow-Methods:
       - OPTIONS,GET,POST
       Access-Control-Allow-Origin:
@@ -35,13 +35,13 @@ http_interactions:
       Geocodetransactioncount:
       - '1'
       Last-Modified:
-      - Sun, 16 Jan 2022 15:36:12 GMT
+      - Sun, 16 Jan 2022 16:42:32 GMT
       Pragma:
       - no-cache
       Reversegeocodetransactioncount:
       - '0'
       Set-Cookie:
-      - JSESSIONID=06C615FC04835A0CA8ABFB95436E2B44; Path=/; HttpOnly
+      - JSESSIONID=CE55E9E79D3968CF13F684CF9A4305DF; Path=/; HttpOnly
       Status:
       - success
       Transactionweight:
@@ -51,6 +51,6 @@ http_interactions:
       string: '{"info":{"statuscode":0,"copyright":{"text":"\u00A9 2022 MapQuest,
         Inc.","imageUrl":"http://api.mqcdn.com/res/mqlogo.gif","imageAltText":"\u00A9
         2022 MapQuest, Inc."},"messages":[]},"options":{"maxResults":-1,"thumbMaps":true,"ignoreLatLngInput":false},"results":[{"providedLocation":{"location":"Washington,DC"},"locations":[{"street":"","adminArea6":"","adminArea6Type":"Neighborhood","adminArea5":"Washington","adminArea5Type":"City","adminArea4":"District
-        of Columbia","adminArea4Type":"County","adminArea3":"DC","adminArea3Type":"State","adminArea1":"US","adminArea1Type":"Country","postalCode":"","geocodeQualityCode":"A5XAX","geocodeQuality":"CITY","dragPoint":false,"sideOfStreet":"N","linkId":"282772166","unknownInput":"","type":"s","latLng":{"lat":38.892062,"lng":-77.019912},"displayLatLng":{"lat":38.892062,"lng":-77.019912},"mapUrl":"http://www.mapquestapi.com/staticmap/v5/map?key=uLkKiNYk4hsISHMGIlAN58sm0zghShaG&type=map&size=225,160&locations=38.892062,-77.019912|marker-sm-50318A-1&scalebar=true&zoom=12&rand=-196518349"}]}]}'
-  recorded_at: Sun, 16 Jan 2022 15:36:12 GMT
+        of Columbia","adminArea4Type":"County","adminArea3":"DC","adminArea3Type":"State","adminArea1":"US","adminArea1Type":"Country","postalCode":"","geocodeQualityCode":"A5XAX","geocodeQuality":"CITY","dragPoint":false,"sideOfStreet":"N","linkId":"282772166","unknownInput":"","type":"s","latLng":{"lat":38.892062,"lng":-77.019912},"displayLatLng":{"lat":38.892062,"lng":-77.019912},"mapUrl":"http://www.mapquestapi.com/staticmap/v5/map?key=<map_key>&type=map&size=225,160&locations=38.892062,-77.019912|marker-sm-50318A-1&scalebar=true&zoom=12&rand=-1850431511"}]}]}'
+  recorded_at: Sun, 16 Jan 2022 16:42:32 GMT
 recorded_with: VCR 6.0.0
